# gt4sd-trainer-hf-pl

./: CONTRIBUTING.md  README.md  conda.yml  conda_gpu.yml  cpu_requirements.txt  gpu_requirements.txt  lm_example.jsonl  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: cla-signature.yaml  pypi.yaml  tests.yaml
bench/: run.sh
bench/t5_tiny/: config.json
src/gt4sd/lm_trainer/: __init__.py  argument_parser.py  cli_pl_to_hf_converter.py  cli_trainer.py  core.py
src/gt4sd/lm_trainer/lm/: core.py  lm_datasets.py  models.py
src/gt4sd/lm_trainer/tests/: test_lm_trainer.py
src/gt4sd/trainer/hf_pl/: __init__.py  cli_pl_to_hf_converter.py  cli_trainer.py  core.py  pytorch_lightning_trainer.py
src/gt4sd/trainer/hf_pl/models/: core.py
src/gt4sd/trainer/hf_pl/tests/: test_lm_trainer.py
src/gt4sd/trainer/lm/: argument_parser.py  cli_trainer.py  core.py
src/gt4sd/trainer/lm/datasets/: core.py
src/gt4sd/trainer/lm/models/: core.py
src/gt4sd/trainer/lm/tests/: lm_example.jsonl  test_lm_trainer.py
src/gt4sd_trainer/hf_pl/: __init__.py  cli_trainer.py  core.py  pytorch_lightning_trainer.py
src/gt4sd_trainer/hf_pl/models/: core.py
src/gt4sd_trainer/hf_pl/tests/: test_lm_trainer.py
