[metadata]
name = gt4sd-lm-trainer
version = attr: gt4sd.lm_trainer.__version__
description = Language Modeling trainer submodule of GT4SD.
author= GT4SD team
long_description_content_type=text/markdown
long_description = file: README.md
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
install_requires =
    datasets
    importlib_metadata
    importlib_resources
    joblib
    numpy
    pytorch_lightning
    pyyaml
    regex
    scikit-learn
    scipy
    sentencepiece
    tensorboard
    torch
    transformers<4.26.0
    typing_extensions
    wheel
setup_requires =
    setuptools
package_dir =
    = src
packages=find_namespace:
include_package_data = False  # would break package_data

[options.entry_points]
console_scripts=
    gt4sd-lm-trainer = gt4sd.lm_trainer.cli_trainer:main
    gt4sd-pl-to-hf = gt4sd.lm_trainer.cli_pl_to_hf_converter:main

[options.package_data]
gt4sd.lm_trainer =
    py.typed
    tests/*.jsonl

[options.packages.find]
where = src

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[mypy]
check_untyped_defs = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-regex.*]
ignore_missing_imports = True

[mypy-transformers.*]
ignore_missing_imports = True

# to avoid mypy from crashing (https://github.com/python/mypy/issues/11045)
[mypy-transformers.trainer]
check_untyped_defs = False

[mypy-torch.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-sentencepiece.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-torch_geometric.*]
ignore_missing_imports = True

[mypy-torch_scatter.*]
ignore_missing_imports = True

[mypy-torch_sparse.*]
ignore_missing_imports = True

[mypy-packaging.*]
ignore_missing_imports = True

[mypy-pyparsing.*]
ignore_missing_imports = True