[metadata]
name = gt4sd-trainer-hf-pl
version = attr: gt4sd_trainer.hf_pl.__version__
description = Transformers trainer submodule of GT4SD.
author= GT4SD team
long_description_content_type=text/markdown
long_description = file: README.md
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    charset-normalizer>=2.0
    datasets>=1.11.0
    importlib-metadata>=1.7.0
    importlib-resources>=5.10.0
    joblib>=1.1.0
    numpy>=1.16.5
    pytorch_lightning>=1.5.10,<=1.9.5
    pyyaml>=5.4.1
    regex>=2.5.91
    scikit-learn>=1.0.0
    scipy>=1.0.0
    sentencepiece>=0.1.95
    tensorboard>=2.2.0
    torch>=1.0
    torchmetrics>=0.7.0
    transformers>=4.22.0
    typing_extensions>=3.7.4.3
    wheel>=0.26
setup_requires =
    setuptools
package_dir =
    = src
packages=find_namespace:
include_package_data = False  # would break package_data

[options.entry_points]
console_scripts=
    gt4sd-trainer-hf-pl = gt4sd_trainer.hf_pl.cli_trainer:main
    gt4sd-pl-to-hf = gt4sd_trainer.hf_pl.cli_pl_to_hf_converter:main

[options.package_data]
gt4sd_trainer.hf_pl =
    py.typed
    tests/*.jsonl

[options.packages.find]
where = src

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[mypy]
check_untyped_defs = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-regex.*]
ignore_missing_imports = True

[mypy-transformers.*]
ignore_missing_imports = True

# to avoid mypy from crashing (https://github.com/python/mypy/issues/11045)
[mypy-transformers.trainer]
check_untyped_defs = False

[mypy-torch.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-sentencepiece.*]
ignore_missing_imports = True

[mypy-importlib_resources.*]
ignore_missing_imports = True

[mypy-pytorch_lightning.*]
ignore_missing_imports = True

[mypy-datasets.*]
ignore_missing_imports = True